--- a/service.html
+++ b/service.html
@@ -74,7 +74,7 @@
         <h2 class="itern">Review Services</h2>
         <ul>
           <li>IEEE Transactions on Sustainable Energy</li>
-          <li>IEEE Access</li>
+          <li>IEEE Transactions on Industrial Informatics</li>
           <li>Journal of Intelligent Manufacturing</li>
           <li>Complexity</li>
         </ul>
