--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>YANG Luoxiao - Personal Homepage</title>
+    <title>MIN Boya - Personal Homepage</title>
     <meta property="og:locale" content="en-US">
-    <meta property="og:site_name" content="YANG Luoxiao">
-    <meta property="og:title" content="YANG Luoxiao - Personal Homepage">
-    <link rel="canonical" href="https://yangluoxiao.github.io/">
-    <meta property="og:url" content="https://yangluoxiao.github.io/">
+    <meta property="og:site_name" content="MIN Boya">
+    <meta property="og:title" content="MIN Boya - Personal Homepage">
+    <link rel="canonical" href="https://minboya.github.io/">
+    <meta property="og:url" content="https://minboya.github.io/">
     <meta property="og:description" content="About me">
     <script type="application/ld+json">
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "YANG Luoxiao",
-      "url" : "https://yangluoxiao.github.io",
+      "name" : "MIN Boya",
+      "url" : "https://minboya.github.io",
       "sameAs" : null
     }
     </script>
-    <link href="https://yangluoxiao.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="YANG Luoxiao Feed">
+    <link href="https://minboya.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="MIN Boya Feed">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -46,12 +46,11 @@
           <nav id="site-nav" class="greedy-nav">
             <button><div class="navicon"></div></button>
             <ul class="visible-links">
-              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">YANG Luoxiao's Homepage</a></li>
+              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">MIN Boya's Homepage</a></li>
               <li class="masthead__menu-item"><a href="./publication.html">Publications</a></li>
-              <li class="masthead__menu-item"><a href="./teaching.html">Teaching</a></li>
+              <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
-              <li class="masthead__menu-item"><a href="./service.html">Service</a></li>
             </ul>
             <ul class="hidden-links hidden"></ul>
           </nav>
@@ -63,17 +62,17 @@
       <div class="sidebar sticky">
         <div itemscope itemtype="http://schema.org/Person">
           <div class="author__avatar">
-            <img src="./yang_photo.jpeg" class="author__avatar" alt="YANG Luoxiao">
+            <img src="./min_photo.jpeg" class="author__avatar" alt="MIN Boya">
           </div>
           <div class="author__content">
-            <h3 class="author__name">YANG Luoxiao</h3>
-            <p class="author__bio">Associate Professor <br> Xi'an University of Technology</p>
+            <h3 class="author__name">MIN Boya</h3>
+            <p class="author__bio">Senior Battery Management System Engineer <br> BYD Auto, Institute of Advanced Technology</p>
           </div>
           <div class="author__urls-wrapper">
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
-              <li><a href="mailto:luoxiyang2-c@my.cityu.edu.hk"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
-              <li><a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+              <li><a href="mailto:minboya@stu.xjtu.edu.cn"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
+              <li><a href="tel:+86 13186121617"><i class="fas fa-fw fa-phone" aria-hidden="true"></i> Phone</a></li>
             </ul>
           </div>
         </div>
@@ -87,18 +86,27 @@
             <h1 class="page__title" itemprop="headline">About Me</h1>
           </header>
           <section class="page__content" itemprop="text">
-            <p>I am an Associate Professor at Xi'an University of Technology. I obtained my Ph.D. in Data Science from City University of Hong Kong in 2023, under the supervision of Prof. ZHANG Zijun. Before that, I received my bachelor's degree in Electrical Engineering & Automation from Xi'an Jiaotong University in 2019.</p>
+            <p>I am a Senior Battery Management System Engineer at BYD Auto, Institute of Advanced Technology. I obtained my Master's degree in Power Engineering & Engineering Thermophysics from Xi'an Jiaotong University in 2022, under the supervision of Prof. GUO Liejin and Prof. LIU Maochang. Before that, I received my bachelor's degree in Chemical Engineering & Technology from Southeast University in 2019.</p>
             
-            <p><b>Research Interests</b>: My research focuses on time series forecasting, renewable energy, and anomaly detection.</p>
+            <p><b>Research Interests</b>: My research focuses on electrocatalysis for water splitting, photocatalytic CO2 reduction, advanced nanomaterials for catalysis, and battery management systems.</p>
 
-            <h1 id="news">News</h1>
+            <h1 id="education">Education</h1>
             <ul>
-              <li><b><font color="#9EA3AB">[2023.12]</font></b> Joined Xi'an University of Technology as an Associate Professor</li>
-              <li><b><font color="#9EA3AB">[2023.08]</font></b> Joined Xi'an Jiaotong University as an Assistant Professor</li>
-              <li><b><font color="#9EA3AB">[2023.06]</font></b> Worked as an Associate Researcher at City University of Hong Kong, Shenzhen Research Institute</li>
+              <li><b>Xi'an Jiaotong University (C9)</b>, Master of Power Engineering & Engineering Thermophysics, 2019.9 - 2022.6</li>
+              <li><b>Southeast University (Project 985)</b>, Bachelor of Chemical Engineering & Technology, 2015.9 - 2019.9</li>
             </ul>
 
-            
+            <h1 id="experience">Work Experience</h1>
+            <ul>
+              <li><b>BYD Auto, Institute of Advanced Technology</b>, Senior Battery Management System Engineer, 2022.7 - Present</li>
+            </ul>
+
+            <h1 id="publications">Selected Publications</h1>
+            <ol>
+              <li>Min B*, Wu W*, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
+              <li>Xue F, Guo X, Min B, et al. Unconventional high-index facet of iridium boosts oxygen evolution reaction: how the facet matters. <i>ACS Catalysis</i>, 2021, 11(13): 8239-8246.</li>
+            </ol>
+
           </section>
         </div>
       </article>
