--- a/experience.html
+++ b/experience.html
@@ -2,22 +2,22 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Experience - YANG Luoxiao</title>
+    <title>Experience - MIN Boya</title>
     <meta property="og:locale" content="en-US">
-    <meta property="og:site_name" content="YANG Luoxiao">
+    <meta property="og:site_name" content="MIN Boya">
     <meta property="og:title" content="Experience">
-    <link rel="canonical" href="https://yangluoxiao.github.io/experience/">
-    <meta property="og:url" content="https://yangluoxiao.github.io/experience/">
+    <link rel="canonical" href="https://minboya.github.io/experience/">
+    <meta property="og:url" content="https://minboya.github.io/experience/">
     <script type="application/ld+json">
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "YANG Luoxiao",
-      "url" : "https://yangluoxiao.github.io",
+      "name" : "MIN Boya",
+      "url" : "https://minboya.github.io",
       "sameAs" : null
     }
     </script>
-    <link href="https://yangluoxiao.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="YANG Luoxiao Feed">
+    <link href="https://minboya.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="MIN Boya Feed">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,12 +35,11 @@
           <nav id="site-nav" class="greedy-nav">
             <button><div class="navicon"></div></button>
             <ul class="visible-links">
-              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">YANG Luoxiao's Homepage</a></li>
+              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">MIN Boya's Homepage</a></li>
               <li class="masthead__menu-item"><a href="./publication.html">Publications</a></li>
-              <li class="masthead__menu-item"><a href="./teaching.html">Teaching</a></li>
+              <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
-              <li class="masthead__menu-item"><a href="./service.html">Service</a></li>
             </ul>
             <ul class="hidden-links hidden"></ul>
           </nav>
@@ -52,17 +51,17 @@
       <div class="sidebar sticky">
         <div itemscope itemtype="http://schema.org/Person">
           <div class="author__avatar">
-            <img src="./yang_photo.jpeg" class="author__avatar" alt="YANG Luoxiao">
+            <img src="./min_photo.jpeg" class="author__avatar" alt="MIN Boya">
           </div>
           <div class="author__content">
-            <h3 class="author__name">YANG Luoxiao</h3>
-            <p class="author__bio">Associate Professor <br> Xi'an University of Technology</p>
+            <h3 class="author__name">MIN Boya</h3>
+            <p class="author__bio">Senior Battery Management System Engineer <br> BYD Auto, Institute of Advanced Technology</p>
           </div>
           <div class="author__urls-wrapper">
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
-              <li><a href="mailto:luoxiyang2-c@my.cityu.edu.hk"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
-              <li><a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+              <li><a href="mailto:minboya@stu.xjtu.edu.cn"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
+              <li><a href="tel:+86 13186121617"><i class="fas fa-fw fa-phone" aria-hidden="true"></i> Phone</a></li>
             </ul>
           </div>
         </div>
@@ -73,15 +72,20 @@
 
         <h2 class="intern">Work</h2>
         <ul>
-          <li>2023-present, Associate Professor, <strong>Xi'an University of Technology</strong></li>
-          <li>2023-2023, Assistant Professor, <strong>Xi'an Jiaotong University</strong></li>
-          <li>2023-2023, Associate Researcher, <strong>City University of Hong Kong, Shenzhen Research Institute</strong></li>
+          <li>2022.7 - Present, Senior Battery Management System Engineer, <strong>BYD Auto, Institute of Advanced Technology</strong></li>
         </ul>
 
         <h2 class="intern">Education</h2>
         <ul>
-          <li>2019-2023, Ph.D. in Data Science, <strong>City University of Hong Kong</strong></li>
-          <li>2015-2019, B.Eng. in Electrical Engineering & Automation, <strong>Xi'an Jiaotong University</strong></li>
+          <li>2019.9 - 2022.6, Master of Power Engineering & Engineering Thermophysics, <strong>Xi'an Jiaotong University (C9)</strong></li>
+          <li>2015.9 - 2019.9, Bachelor of Chemical Engineering & Technology, <strong>Southeast University (Project 985)</strong></li>
+        </ul>
+
+        <h2 class="intern">Research Experience</h2>
+        <ul>
+          <li>2021.04 - 2022.06, <strong>Synthesis of Multielemental Transition Metal Chalcogenides for Electrocatalytic Water Splitting</strong></li>
+          <li>2020.05 - 2021.06, <strong>Synthesis of Pd@Ir and Investigation of Ir Facet Effects on OER Activity</strong></li>
+          <li>2017.10 - 2019.03, <strong>Rational Design of Co-Cu/TiO₂ Photocatalyst for Efficient CO₂ Conversion via MOF-Templated Synthesis</strong></li>
         </ul>
       </div>
     </div>
