--- a/awards.html
+++ b/awards.html
@@ -2,22 +2,22 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Awards - YANG Luoxiao</title>
+    <title>Awards - MIN Boya</title>
     <meta property="og:locale" content="en-US">
-    <meta property="og:site_name" content="YANG Luoxiao">
+    <meta property="og:site_name" content="MIN Boya">
     <meta property="og:title" content="Awards">
-    <link rel="canonical" href="https://yangluoxiao.github.io/awards/">
-    <meta property="og:url" content="https://yangluoxiao.github.io/awards/">
+    <link rel="canonical" href="https://minboya.github.io/awards/">
+    <meta property="og:url" content="https://minboya.github.io/awards/">
     <script type="application/ld+json">
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "YANG Luoxiao",
-      "url" : "https://yangluoxiao.github.io",
+      "name" : "MIN Boya",
+      "url" : "https://minboya.github.io",
       "sameAs" : null
     }
     </script>
-    <link href="https://yangluoxiao.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="YANG Luoxiao Feed">
+    <link href="https://minboya.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="MIN Boya Feed">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,12 +35,11 @@
           <nav id="site-nav" class="greedy-nav">
             <button><div class="navicon"></div></button>
             <ul class="visible-links">
-              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">YANG Luoxiao's Homepage</a></li>
+              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">MIN Boya's Homepage</a></li>
               <li class="masthead__menu-item"><a href="./publication.html">Publications</a></li>
-              <li class="masthead__menu-item"><a href="./teaching.html">Teaching</a></li>
+              <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
-              <li class="masthead__menu-item"><a href="./service.html">Service</a></li>
             </ul>
             <ul class="hidden-links hidden"></ul>
           </nav>
@@ -52,17 +51,17 @@
       <div class="sidebar sticky">
         <div itemscope itemtype="http://schema.org/Person">
           <div class="author__avatar">
-            <img src="./yang_photo.jpeg" class="author__avatar" alt="YANG Luoxiao">
+            <img src="./min_photo.jpeg" class="author__avatar" alt="MIN Boya">
           </div>
           <div class="author__content">
-            <h3 class="author__name">YANG Luoxiao</h3>
-            <p class="author__bio">Associate Professor <br> Xi'an University of Technology</p>
+            <h3 class="author__name">MIN Boya</h3>
+            <p class="author__bio">Senior Battery Management System Engineer <br> BYD Auto, Institute of Advanced Technology</p>
           </div>
           <div class="author__urls-wrapper">
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
-              <li><a href="mailto:luoxiyang2-c@my.cityu.edu.hk"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
-              <li><a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+              <li><a href="mailto:minboya@stu.xjtu.edu.cn"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
+              <li><a href="tel:+86 13186121617"><i class="fas fa-fw fa-phone" aria-hidden="true"></i> Phone</a></li>
             </ul>
           </div>
         </div>
@@ -74,11 +73,11 @@
           <article class="archive__item" itemscope itemtype="http://schema.org/CreativeWork">
             <h2 class="archive__item-title" itemprop="headline">Honors and Awards</h2>
             <ul>
-              <li>Youth Talent of Shaanxi Province</li>
-              <li>INFORMS Annual Meeting 2022 Cluster of Sustainability Best Student Paper Award Third-Prize</li>
-              <li>Outstanding Academic Performance Award</li>
-              <li>Research Tuition Scholarship 2022</li>
-              <li>Research Tuition Scholarship 2021</li>
+              <li>First Prize, Eastern China Region, 2nd National Undergraduate Chemical Engineering Experiment Competition</li>
+              <li>President's Scholarship, Southeast University (Top 1%)</li>
+              <li>Dalian Institute of Chemical Physics Scholarship (Top 5%)</li>
+              <li>Jiangsu Electric Power Scholarship (Top 5%)</li>
+              <li>Special Academic Scholarship, Xi'an Jiaotong University (Top 10%)</li>
             </ul>
           </article>
         </div>
