--- a/publication.html
+++ b/publication.html
@@ -2,22 +2,22 @@
 <html lang="en" class="no-js">
   <head>
     <meta charset="utf-8">
-    <title>Publications - YANG Luoxiao</title>
+    <title>Publications - MIN Boya</title>
     <meta property="og:locale" content="en-US">
-    <meta property="og:site_name" content="YANG Luoxiao">
+    <meta property="og:site_name" content="MIN Boya">
     <meta property="og:title" content="Publications">
-    <link rel="canonical" href="https://yangluoxiao.github.io/publications/">
-    <meta property="og:url" content="https://yangluoxiao.github.io/publications/">
+    <link rel="canonical" href="https://minboya.github.io/publications/">
+    <meta property="og:url" content="https://minboya.github.io/publications/">
     <script type="application/ld+json">
     {
       "@context" : "http://schema.org",
       "@type" : "Person",
-      "name" : "YANG Luoxiao",
-      "url" : "https://yangluoxiao.github.io",
+      "name" : "MIN Boya",
+      "url" : "https://minboya.github.io",
       "sameAs" : null
     }
     </script>
-    <link href="https://yangluoxiao.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="YANG Luoxiao Feed">
+    <link href="https://minboya.github.io/feed.xml" type="application/atom+xml" rel="alternate" title="MIN Boya Feed">
     <meta name="HandheldFriendly" content="True">
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -35,12 +35,11 @@
           <nav id="site-nav" class="greedy-nav">
             <button><div class="navicon"></div></button>
             <ul class="visible-links">
-              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">YANG Luoxiao's Homepage</a></li>
+              <li class="masthead__menu-item masthead__menu-item--lg"><a href="./index.html">MIN Boya's Homepage</a></li>
               <li class="masthead__menu-item"><a href="./publication.html">Publications</a></li>
-              <li class="masthead__menu-item"><a href="./teaching.html">Teaching</a></li>
+              <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
-              <li class="masthead__menu-item"><a href="./service.html">Service</a></li>
             </ul>
             <ul class="hidden-links hidden"></ul>
           </nav>
@@ -52,17 +51,17 @@
       <div class="sidebar sticky">
         <div itemscope itemtype="http://schema.org/Person">
           <div class="author__avatar">
-            <img src="./yang_photo.jpeg" class="author__avatar" alt="YANG Luoxiao">
+            <img src="./min_photo.jpeg" class="author__avatar" alt="MIN Boya">
           </div>
           <div class="author__content">
-            <h3 class="author__name">YANG Luoxiao</h3>
-            <p class="author__bio">Associate Professor <br> Xi'an University of Technology</p>
+            <h3 class="author__name">MIN Boya</h3>
+            <p class="author__bio">Senior Battery Management System Engineer <br> BYD Auto, Institute of Advanced Technology</p>
           </div>
           <div class="author__urls-wrapper">
             <button class="btn btn--inverse">Follow</button>
             <ul class="author__urls social-icons">
-              <li><a href="mailto:luoxiyang2-c@my.cityu.edu.hk"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
-              <li><a href="https://scholar.google.com/citations?user=YOUR_GOOGLE_SCHOLAR_ID"><i class="fas fa-fw fa-graduation-cap"></i> Google Scholar</a></li>
+              <li><a href="mailto:minboya@stu.xjtu.edu.cn"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
+              <li><a href="tel:+86 13186121617"><i class="fas fa-fw fa-phone" aria-hidden="true"></i> Phone</a></li>
             </ul>
           </div>
         </div>
@@ -73,25 +72,16 @@
 
         <h2>Journal Papers</h2>
         <ol>
-          <li><b>YANG Luoxiao</b> and Z. Zhang, "A Conditional Convolutional Autoencoder Based Method for Monitoring Wind Turbine Blade Breakages," IEEE Transactions on Industrial Informatics, 2020.</li>
-          <li><b>YANG Luoxiao</b>, L. Wang, Z. Zheng, and Z. Zhang, "A Continual Learning-based Framework for Developing A Single Wind Turbine Cybertwin Adaptively Serving Multiple Modeling Tasks," IEEE Transactions on Industrial Informatics, 2021.</li>
-          <li><b>YANG Luoxiao</b> and Z. Zhang, "A Deep Attention Convolutional Recurrent Network Assisted by K-shape Clustering and Enhanced Memory for Short Term Wind Speed Predictions," IEEE Transactions on Sustainable Energy, 2021.</li>
-          <li><b>YANG Luoxiao</b>, Z. Zheng, and Z. Zhang, "An Improved Mixture Density Network via Wasserstein Distance Based Adversarial Learning for Probabilistic Wind Speed Predictions," IEEE Transactions on Sustainable Energy, 2021.</li>
-          <li><b>YANG Luoxiao</b>, L. Wang, and Z. Zhang, "Generative Wind Power Curve Modeling Via Machine Vision: A Deep Convolutional Network Method with Data-Synthesis-Informed-Training," IEEE Transactions on Power Systems, 2022.</li>
-          <li><b>YANG Luoxiao</b> and Z. Zhang, "Wind Turbine Gearbox Failure Detection Based on SCADA Data: A Deep Learning Based Approach," IEEE Transactions on Instrumentation and Measurement, 2020.</li>
-          <li>X. Liu, <b>YANG Luoxiao</b> and Z. Zhang, "The Attention-assisted Ordinary Differential Equation Networks for Short-term Probabilistic Wind Power Predictions," Applied Energy, 2022.</li>
-          <li>X. Liu, <b>YANG Luoxiao</b> and Z. Zhang, "Short-term Multi-step Ahead Wind Power Predictions Based on A Novel Deep Convolutional Recurrent Network Method," IEEE Transactions on Sustainable Energy, 2021.</li>
-          <li>Z. Zheng, L. Wang, <b>YANG Luoxiao</b> and Z. Zhang, "Generative Probabilistic Wind Speed Forecasting: A Variational Recurrent Autoencoder Based Method," IEEE Transactions on Power Systems, 2021.</li>
+          <li><b>Min B*</b>, Wu W*, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
+          <li>Xue F, Guo X, <b>Min B</b>, et al. Unconventional high-index facet of iridium boosts oxygen evolution reaction: how the facet matters. <i>ACS Catalysis</i>, 2021, 11(13): 8239-8246.</li>
+          <li>Wu W, Peng L, <b>Min B</b>, et al. Activated overall water splitting over a Ni-Fe layered double hydroxide electrocatalyst by V doping and sulfuration. <i>Applications in Energy and Combustion Science</i>, 2023, 14: 100148.</li>
+          <li>Liu M, Chen G, <b>Min B</b>, et al. Photocatalytic CO2 reduction. <i>Solar‐to‐Chemical Conversion: Photocatalytic and Photoelectrochemcial Processes</i>, 2021: 243-267.</li>
         </ol>
 
-        <h2>Conference Papers</h2>
+        <h2>Thesis</h2>
         <ol>
-          <li><b>YANG Luoxiao</b>, Fan X, Zhang Z, "Your time series is worth a binary image: machine vision assisted deep framework for time series forecasting," arXiv preprint arXiv:2302.14390, 2023.</li>
-        </ol>
-
-        <h2>Patents</h2>
-        <ol>
-          <li><b>YANG Luoxiao</b> and Z. Zhang, Wind Turbine Performance Determination And Control, US patent No. 63/289,306</li>
+          <li><b>Min B</b>. Synthesis of Multielemental Transition Metal Chalcogenides for Electrocatalytic Water Splitting. Master's Thesis, Xi'an Jiaotong University, 2022.</li>
+          <li><b>Min B</b>. Synthesis and Mechanistic Study of Magnesium-Doped g-C₃N₄ for Enhanced Photocatalytic CO₂ Reduction. Bachelor's Thesis, Southeast University, 2019.</li>
         </ol>
       </div>
     </div>
