--- a/research.html
+++ b/research.html
@@ -40,8 +40,8 @@
               <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
-              <li class="masthead__menu-item"><a href="./skills-and-research.html">Skills and Research</a></li>
-            </ul>
+              <li class="masthead__menu-item"><a href="./skill.html">Skills</a></li>
+            </ul
             <ul class="hidden-links hidden"></ul>
           </nav>
         </div>
