--- a/awards.html
+++ b/awards.html
@@ -40,6 +40,7 @@
               <li class="masthead__menu-item"><a href="./research.html">Research</a></li>
               <li class="masthead__menu-item"><a href="./awards.html">Awards</a></li>
               <li class="masthead__menu-item"><a href="./experience.html">Experience</a></li>
+              <li class="masthead__menu-item"><a href="./skill.html">Skills</a></li>
             </ul>
             <ul class="hidden-links hidden"></ul>
           </nav>
