--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <h1 id="publications">Selected Publications</h1>
             <ol>
-              <li>Min B*, Wu W*, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
+              <li> Wu W†, Min B†, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
               <li>Xue F, Guo X, Min B, et al. Unconventional high-index facet of iridium boosts oxygen evolution reaction: how the facet matters. <i>ACS Catalysis</i>, 2021, 11(13): 8239-8246.</li>
             </ol>
 
