--- a/publication.html
+++ b/publication.html
@@ -72,7 +72,7 @@
 
         <h2>Journal Papers</h2>
         <ol>
-          <li><b>Min B*</b>, Wu W*, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
+          <li>Wu W†,<b> Min B†</b>, Li H, et al. NiFe-LDH coated NiSe/Ni foam as a bifunctional electrocatalyst for overall water splitting. <i>Reaction Chemistry & Engineering</i>, 2023, 8(7): 1711-1718.</li>
           <li>Xue F, Guo X, <b>Min B</b>, et al. Unconventional high-index facet of iridium boosts oxygen evolution reaction: how the facet matters. <i>ACS Catalysis</i>, 2021, 11(13): 8239-8246.</li>
           <li>Wu W, Peng L, <b>Min B</b>, et al. Activated overall water splitting over a Ni-Fe layered double hydroxide electrocatalyst by V doping and sulfuration. <i>Applications in Energy and Combustion Science</i>, 2023, 14: 100148.</li>
           <li>Liu M, Chen G, <b>Min B</b>, et al. Photocatalytic CO2 reduction. <i>Solar‐to‐Chemical Conversion: Photocatalytic and Photoelectrochemcial Processes</i>, 2021: 243-267.</li>
