--- a/research.html
+++ b/research.html
@@ -31,9 +31,10 @@
         margin-bottom: 2em;
       }
       .research-image {
-        max-width: 100%;
+        max-width: 80%;
         height: auto;
-        margin: 1em 0;
+        margin: 1em auto;
+        display: block;
         border: 1px solid #ddd;
         border-radius: 4px;
       }
@@ -136,7 +137,7 @@
             <li>Conducted long-term stability tests to verify the durability enhancements provided by the core-shell architecture, contributing to the design of efficient and stable non-noble metal bifunctional catalysts.</li>
           </ul>
 
-          <img src="fig4.png" alt="Electrocatalytic performance of NiSe@NiFe-LDH/NF" class="research-image">
+          <img src="fig4.png" alt="Electrocatalytic performance of NiSe@NiFe-LDH/NF" class="research-image-small">
           <p class="image-caption">Figure 4: (a) Overall water splitting performance curves of NiSe/NF, NiFe-LDH/NF, and NiSe@NiFe-LDH/NF; (b) Comparison of overall water splitting performance of catalysts; (c) Stability test curve of NiSe@NiFe-LDH/NF for overall water splitting; (d) Overall water splitting performance curves of NiSe@NiFe-LDH/NF before and after stability test.</p>
         </div>
 
