--- a/research.html
+++ b/research.html
@@ -99,16 +99,17 @@
         <h1 class="page__title">Research Experience</h1>
 
         <div class="research-section">
-          <h2>Advanced Battery Management System Research and Development</h2>
-          <p><strong>2022.07 - Present</strong></p>
+          <h2>Battery Remaining Lifetime Analytics Powered by Vision Intelligence</h2>
+          <p><strong>2024.07 - Present</strong></p>
+          <img src="fig0.png" alt="Schematic diagram of the proposed VI-DViT" class="research-image">
+          <p class="image-caption">Figure 0: The schematic diagram of the proposed VI-DViT.</p>
+          
           <ul>
-            <li>Spearheaded multiple BMS hardware and software development projects for next-generation electric vehicles, focusing on enhancing energy efficiency and battery longevity.</li>
-            <li>Developed and implemented an innovative State of Charge (SOC) and State of Health (SOH) estimation algorithm based on adaptive Kalman filtering, achieving ±1% accuracy and extending battery cycle life by 5-8%.</li>
-            <li>Engineered a real-time multi-parameter analysis system for monitoring critical battery parameters (temperature, voltage, current), leading to significant improvements in thermal runaway prevention algorithms.</li>
-            <li>Conceptualized and implemented novel battery balancing control strategies, including adaptive multi-threshold control and predictive balancing algorithms, resulting in markedly improved battery consistency and overall pack performance.</li>
-            <li>Authored two corporate standards and two comprehensive technical reports on advanced BMS technologies, contributing to the standardization of industry practices.</li>
+            <li>Pioneered a novel visual intelligence-assisted deep learning approach for battery remaining useful life (RUL) and probabilistic lifetime predictions, developing the Visual Intelligence generated Dilated Vision Transformer (VI-DViT) framework to address key challenges in battery management systems.</li>
+            <li>Designed and implemented a three-stage VI-DViT framework comprising neural representation, neural prediction (featuring a Dilated Vision Transformer), and visual decoding stages, inspired by the human visual system's capability to extract simplified neural representations from complex visual information.</li>
+            <li>Validated the VI-DViT's effectiveness through extensive computational analyses on two public datasets, demonstrating superior performance in adaptiveness, generalizability, and probabilistic prediction compared to traditional data-driven benchmarks and human visual predictions, advancing the field of universal battery lifetime prediction modeling.</li>
           </ul>
-        </div>
+      </div>
 
         <div class="research-section">
           <h2>Synthesis of Multielemental Transition Metal Chalcogenides for Electrocatalytic Water Splitting</h2>
