--- a/research.html
+++ b/research.html
@@ -99,7 +99,7 @@
         <h1 class="page__title">Research Experience</h1>
 
         <div class="research-section">
-          <h2>Battery Remaining Lifetime Analytics Powered by Vision Intelligence</h2>
+          <h2>1. Battery Remaining Lifetime Analytics Powered by Vision Intelligence</h2>
           <p><strong>2024.07 - Present</strong></p>
           <img src="fig0.png" alt="Schematic diagram of the proposed VI-DViT" class="research-image">
           <p class="image-caption">Figure 0: The schematic diagram of the proposed VI-DViT.</p>
@@ -112,7 +112,7 @@
       </div>
 
         <div class="research-section">
-          <h2>Synthesis of Multielemental Transition Metal Chalcogenides for Electrocatalytic Water Splitting</h2>
+          <h2>2. Synthesis of Multielemental Transition Metal Chalcogenides for Electrocatalytic Water Splitting</h2>
           <p><strong>2021.04 - 2022.06</strong></p>
           
           <h3>2.1 Synthesis and Electrocatalytic Performance of Ternary Transition Metal Sulfide NiFeV-S/NF</h3>
@@ -143,7 +143,7 @@
         </div>
 
         <div class="research-section">
-          <h2>Synthesis of Pd@Ir and Investigation of Ir Facet Effects on OER Activity</h2>
+          <h2>3. Synthesis of Pd@Ir and Investigation of Ir Facet Effects on OER Activity</h2>
           <p><strong>2020.05 - 2021.06</strong></p>
           <img src="fig5.png" alt="Preparation of Pd@Ir and study of Ir facet effects on OER activity" class="research-image">
           <p class="image-caption">Figure 5: Preparation of Pd@Ir and study of the influence of different Ir crystal facets on OER activity.</p>
@@ -157,7 +157,7 @@
         </div>
 
         <div class="research-section">
-          <h2>Rational Design of Co-Cu/TiO<sub>2</sub> Photocatalyst for Efficient CO<sub>2</sub> Conversion via MOF-Templated Synthesis</h2>
+          <h2>4. Rational Design of Co-Cu/TiO<sub>2</sub> Photocatalyst for Efficient CO<sub>2</sub> Conversion via MOF-Templated Synthesis</h2>
           <p><strong>2017.10 - 2019.03</strong></p>
           <img src="fig6.png" alt="Preparation of Co-Cu/TiO2 using MIL-125(Ti) as template" class="research-image">
           <p class="image-caption">Figure 6: Preparation of Co-Cu/TiO<sub>2</sub> using MIL-125(Ti) as a template and its study on CO<sub>2</sub> conversion.</p>
