--- a/experience.html
+++ b/experience.html
@@ -74,7 +74,7 @@
         <h2 class="intern">Work</h2>
         <ul>
           <li>2022.7 - Present, Senior Battery Management System Engineer, <strong>BYD Auto, Institute of Advanced Technology</strong></li>
-          <li>2024.7 - Present, Research Assistant, <strong>City University of Hong Kong Shenzhen Research Institute</strong></li>
+          <li>2024.7 - Present, Research Assistant (Part Time), <strong>City University of Hong Kong Shenzhen Research Institute</strong></li>
         </ul>
 
         <h2 class="intern">Education</h2>
