--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
           <section class="page__content" itemprop="text">
             <p>I am a Senior Battery Management System Engineer at BYD Auto, Institute of Advanced Technology. I obtained my Master's degree in Power Engineering & Engineering Thermophysics from Xi'an Jiaotong University in 2022, under the supervision of Prof. GUO Liejin and Prof. LIU Maochang. Before that, I received my bachelor's degree in Chemical Engineering & Technology from Southeast University in 2019.</p>
             
-            <p><b>Research Interests</b>: My research focuses on electrocatalysis for water splitting, photocatalytic CO<sub>2</sub> reduction, advanced nanomaterials for catalysis, and battery management systems.</p>
+            <p><b>Research Interests</b>: My research focuses on AI4Science, electrocatalysis for water splitting, photocatalytic CO<sub>2</sub> reduction, advanced nanomaterials for catalysis, and battery management systems.</p>
+
+            <p><a href="CV.pdf" target="_blank" class="btn btn--primary">Download CV</a></p>
 
             <h1 id="education">Education</h1>
             <ul>
