--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             
             <p><b>Research Interests</b>: My research focuses on AI4Science, electrocatalysis for water splitting, photocatalytic CO<sub>2</sub> reduction, advanced nanomaterials for catalysis, and battery management systems.</p>
 
-            <p><a href="CV.pdf" target="_blank" class="btn btn--primary">Download CV</a></p>
+            <p><a href="CV_MBY.pdf" target="_blank" class="btn btn--primary">Download CV</a></p>
 
             <h1 id="education">Education</h1>
             <ul>
