--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <h1 id="experience">Work Experience</h1>
             <ul>
               <li><b>BYD Auto, Institute of Advanced Technology</b>, Senior Battery Management System Engineer, 2022.7 - Present</li>
-              <li><b>City University of Hong Kong Shenzhen Research Institute</b>, Research Assistant, 2024.7 - Present</li>
+              <li><b>City University of Hong Kong Shenzhen Research Institute</b>, Research Assistant (Part Time), 2024.7 - Present</li>
             </ul>
 
             <h1 id="publications">Selected Publications</h1>
